--- a/app/src/main/res/drawable-hdpi/circle_background.xml
+++ b/app/src/main/res/drawable-hdpi/circle_background.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/Space_Blue" />
+    <solid android:color="@color/colorPrimaryDark" />
 
 
     <stroke android:width="3dp"
