--- a/app/src/main/res/layout/activity_publishpost.xml
+++ b/app/src/main/res/layout/activity_publishpost.xml
@@ -19,7 +19,8 @@
         android:src="@drawable/ic_cancel"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp"/>
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="25dp"/>
 
     <!-- Dots for bottom of the page -->
     <LinearLayout
@@ -93,6 +94,7 @@
         android:text="1"
         android:textColor="@color/Black"
         android:textSize="25sp"
+        android:visibility="invisible"
         android:textStyle="bold"
         android:layout_marginTop="80dp"
         android:layout_marginLeft="20dp"
