--- a/app/src/main/res/layout/fragment_addingredients.xml
+++ b/app/src/main/res/layout/fragment_addingredients.xml
@@ -2,31 +2,63 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true">
-
-        <TextView
-            android:id="@+id/textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Will be adding ingredients here"
-            android:layout_gravity="center"
-            android:textSize="20sp"/>
+    <RelativeLayout
+        android:id="@+id/relLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
 
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/ic_forknife"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/ingredients" />
 
-    </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/relLayout1">
+
+        <ListView
+            android:id="@+id/listViewIngredients"
+            android:layout_marginTop="40dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </ListView>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_plus_blue"
+            android:layout_below="@id/listViewIngredients"
+            android:layout_marginLeft="10dp"/>
+
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Ingredients"
+        android:textColor="@color/Black"
+        android:textSize="20sp"
+        android:fontFamily="serif"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/relLayout1"
+        android:layout_marginTop="-30dp"
+        android:layout_marginLeft="-10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:background="@drawable/rounded_corners"/>
 
 
 </RelativeLayout>
