--- a/app/src/main/res/layout/fragment_addinstructions.xml
+++ b/app/src/main/res/layout/fragment_addinstructions.xml
@@ -2,7 +2,26 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
+
+    <RelativeLayout
+        android:id="@+id/relLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/instructions"
+            android:scaleType="fitXY"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/relLayout1">
 
 
     <LinearLayout
@@ -27,6 +46,25 @@
             android:layout_marginTop="25dp"/>
 
     </LinearLayout>
+
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Instructions"
+        android:textColor="@color/Black"
+        android:textSize="20sp"
+        android:fontFamily="serif"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/relLayout1"
+        android:layout_marginTop="-30dp"
+        android:layout_marginLeft="-10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:background="@drawable/rounded_corners"/>
 
 
 </RelativeLayout>
