--- a/app/src/main/res/layout/fragment_takepicture.xml
+++ b/app/src/main/res/layout/fragment_takepicture.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Space_Purple">
+    android:background="@color/colorPrimary">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,8 +12,9 @@
         android:textColor="@color/Black"
         android:textSize="20sp"
         android:fontFamily="serif"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="70dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="-10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingTop="30dp"
@@ -34,7 +35,6 @@
             android:id="@+id/ivCameraButton"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            
             android:src="@drawable/camera_comic_two"
             android:background="@drawable/circle_background"
            />
